--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -102,13 +102,13 @@
 <!-- Footer -->
 <footer>
     <!-- start desktop display -->
-    <div class="row d-flex justify-content-between display_desktop mr-0 pl-1">
+    <div class="row d-flex justify-content-between display_desktop mr-0">
         <div class="col-auto pr-0 display_desktop">
             <h5 class="mb-0">Nous contacter</h5>
         </div>
         <div class="col-auto d-flex align-items-start p-0 display_desktop">
             <ul class="p-0 display_desktop">
-                <li class="br text-left"><a class="m-0" href="tel:+44345678903">+44 345 678 903</a></li>
+                <li class="br text-left"><a class="m-0 tel" href="tel:+44345678903">+44 345 678 903</a></li>
                 <li class="br text-left">cocorico-digital@mail.com</li>
                 <li>
                     <address class="br text-left">
@@ -160,7 +160,7 @@
             </div>
             <div class="col-auto d-flex align-items-start p-0 d-none d-lg-none">
                 <ul class="p-0 d-lg-none">
-                    <li class="br text-left"><a class="m-0" href="tel:+44345678903">+44 345 678 903</a></li>
+                    <li class="br text-left"><a class="m-0 tel" href="tel:+44345678903">+44 345 678 903</a></li>
                     <li class="br text-left">cocorico-digital@mail.com</li>
                     <li>
                         <address class="br text-left">
