--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -137,22 +137,22 @@
                 <div class="row col-12 d-none d-lg-block">
                     <h4>Nos clients</h4>
                 </div>
-                <div class="col-lg-3 no-padding shadow-sm p-0 mb-0 bg-white rounded white d-none d-lg-block">
-                    <img src="{{ asset('images/home/projet1.jpg') }}" class="img-fluid" alt="" height="180" width="320">
+                <div class="col-lg-4 no-padding shadow-sm p-0 mb-0 bg-white rounded white d-none d-lg-block">
+                    <img src="{{ asset('images/home/projet1.jpg') }}" class="img-fluid" alt="">
                     <p>Type de projet</p>
                     <h6>Titre h6</h6>
                     <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
                     <a href="#" class="link1">Voir le projet</a>
                 </div>
-                <div class="col-lg-3 no-padding shadow-sm p-0 mb-0 bg-white rounded white d-none d-lg-block">
-                    <img src="{{ asset('images/home/projet2.jpg') }}" class="img-fluid" alt="" height="180" width="320">
+                <div class="col-lg-4 no-padding shadow-sm p-0 mb-0 bg-white rounded white d-none d-lg-block">
+                    <img src="{{ asset('images/home/projet2.jpg') }}" class="img-fluid" alt="">
                     <p>Type de projet</p>
                     <h6>Titre h6</h6>
                     <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
                     <a href="#" class="link1">Voir le projet</a>
                 </div>
-                <div class="col-lg-3 no-padding shadow-sm p-0 mb-0 bg-white rounded white d-none d-lg-block">
-                    <img src="{{ asset('images/home/projet3.jpg') }}" class="img-fluid" alt="" height="180" width="320">
+                <div class="col-lg-4 no-padding shadow-sm p-0 mb-0 bg-white rounded white d-none d-lg-block">
+                    <img src="{{ asset('images/home/projet3.jpg') }}" class="img-fluid" alt="">
                     <p>Type de projet</p>
                     <h6>Titre h6</h6>
                     <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
