--- a/public/CSS/base.css
+++ b/public/CSS/base.css
@@ -93,6 +93,12 @@ body {
     border-top-right-radius: 5px;
 }
 
+.pack {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
+}
+
 .block-decal:nth-child(3n), .block-decal:nth-child(4n) {
     margin-top: 10%;
 }
