--- a/templates/catalog.html.twig
+++ b/templates/catalog.html.twig
@@ -35,7 +35,7 @@
         </div>
         <div class="row d-flex justify-content-around">
             <div class="col-sm-12 col-md-4 col-lg-4">
-                <div class="col-md-12 col-lg-12 white">
+                <div class="col-md-12 col-lg-12 white pack img-round">
                     <div class="col-md-12 col-lg-12 center">
                         <h1>Basic</h1>
                         <h4>500€</h4>
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-4">
-                <div class="col-md-12 col-lg-12 white">
+                <div class="col-md-12 col-lg-12 white pack img-round">
                     <div class="col-md-12 col-lg-12 center">
                         <h1>Premium</h1>
                         <h4>1000€</h4>
@@ -116,7 +116,7 @@
             </div>
 
             <div class="col-sm-12 col-md-4 col-lg-4">
-                <div class="col-md-12 col-lg-12 white">
+                <div class="col-md-12 col-lg-12 white pack img-round">
                     <div class="col-md-12 col-lg-12 center">
                         <h1>Sur-mesure</h1>
                         <h4>Sur devis</h4>
