Change pre-footer background

--- a/public/CSS/base.css
+++ b/public/CSS/base.css
@@ -323,7 +323,7 @@ input, textarea {
 /* BOTTOM PAGE */
 
 #pre-footer {
-    background: url("../images/contact_section.jpg") no-repeat #547D87;
+    background: url("../images/pre-footer.jpg") no-repeat #547D87;
     background-size: cover;
     height: 24em;
     margin-top: 10em;
