--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -153,7 +153,7 @@
         <div class="row col-2 mr-xl-5 d-lg-inline-flex p-0 mr-0 display_desktop">
             <div class="col-12 text-right pr-0">
                 <img src="{{ asset('images/social/linkedin-logo-blanc.svg') }}" class="social" alt="logo linkedin">
-                <a href=""><img src="{{ asset('images/social/facebook-logo-blanc.svg') }}" class="social" alt="logo facebook"></a>
+                <a href="https://www.facebook.com/Cocorico-Digital-435675233930398/?modal=admin_todo_tour"><img src="{{ asset('images/social/facebook-logo-blanc.svg') }}" class="social" alt="logo facebook"></a>
             </div>
             <div class="col-12 text-right align-self-end p-0 display_desktop">
                 <p id="copyright">&copy; Cocorico Digital - 2018</p>
