Space under svg pictograms

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -43,7 +43,7 @@
             <div class="row d-flex justify-content-around margin-auto">
                 <div class="col-12 col-lg-3">
                     <div class="row justify-content-center">
-                        <img src="{{ asset('images/home/1.marketing.svg') }}" height="100" width="100">
+                        <img src="{{ asset('images/home/1.marketing.svg') }}" class="br" height="100" width="100">
                     </div>
                     <div>
                         <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam?
@@ -52,7 +52,7 @@
                 </div>
                 <div class="col-12 col-lg-3">
                     <div class="row justify-content-center">
-                        <img src="{{ asset('images/home/2.design.svg') }}" class="svg" height="100" width="100">
+                        <img src="{{ asset('images/home/2.design.svg') }}" class="br svg" height="100" width="100">
                     </div>
                     <div>
                         <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam?
@@ -61,7 +61,7 @@
                 </div>
                 <div class="col-12 col-lg-3">
                     <div class="row justify-content-center">
-                        <img src="{{ asset('images/home/3.dev.svg') }}" class="svg" height="100" width="100">
+                        <img src="{{ asset('images/home/3.dev.svg') }}" class="br svg" height="100" width="100">
                     </div>
                     <div>
                         <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam?
