Responsive pre-footer

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -98,7 +98,7 @@
         <div class="col-12 align-self-center">
             <h2 class="text-center margin-auto">Un projet ?</h2>
         </div>
-        <div class="offset-4 col-4 text-center">
+        <div class="offset-sm-4 offset-2 col-8 col-sm-4 text-center">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam? Tria Lorem
                 ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam? Tria</p>
         </div>
