--- a/templates/catalog.html.twig
+++ b/templates/catalog.html.twig
@@ -197,7 +197,7 @@
                 <div class="row d-flex justify-content-around">
                     <div class="col-sm-12 col-md-3 col-lg-3 ">
                         <img src="{{ asset('images/catalog/4.design.svg') }}" alt="Bootstrap" class="rounded mx-auto d-block svg100">
-                        <h5>On design</h5>
+                        <h5>On conçoit</h5>
                         <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
                             opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit
                             vultu adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet
