LinkedIn link ok

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -68,7 +68,7 @@
                                 <a class="nav-link" href="{{ path('contact_page') }}">Nous contacter</a>
                             </li>
                             <li class="nav-item d-lg-none">
-                                <a class="nav-link mr-0" href="#"><img
+                                <a class="nav-link mr-0" href="https://www.linkedin.com/company/cocorico-digital?trk=d_public_post_follow_view_profile"><img
                                             src="{{ asset('images/social/linkedin-logo-bleu.svg') }}"
                                             class="social"
                                             alt="logo linkedin"></a>
@@ -82,7 +82,7 @@
                 </nav>
             </div>
             <div class="order-lg-3 col-auto align-self-center ml-auto p-2 bd-highlight d-none d-lg-block">
-                <a href="#"><img src="{{ asset('images/social/linkedin-logo-bleu.svg') }}" class="social"
+                <a href="https://www.linkedin.com/company/cocorico-digital?trk=d_public_post_follow_view_profile"><img src="{{ asset('images/social/linkedin-logo-bleu.svg') }}" class="social"
                         alt="logo linkedin"></a>
                 <a href="https://www.facebook.com/Cocorico-Digital-435675233930398/?modal=admin_todo_tour"><img src="{{ asset('images/social/facebook-logo-bleu.svg') }}" class="social"
                         alt="logo facebook"></a>
@@ -152,7 +152,7 @@
         </div>
         <div class="row col-2 mr-xl-5 d-lg-inline-flex p-0 mr-0 display_desktop">
             <div class="col-12 text-right pr-0">
-                <img src="{{ asset('images/social/linkedin-logo-blanc.svg') }}" class="social" alt="logo linkedin">
+                <a href="https://www.linkedin.com/company/cocorico-digital?trk=d_public_post_follow_view_profile"><img src="{{ asset('images/social/linkedin-logo-blanc.svg') }}" class="social" alt="logo linkedin"></a>
                 <a href="https://www.facebook.com/Cocorico-Digital-435675233930398/?modal=admin_todo_tour"><img src="{{ asset('images/social/facebook-logo-blanc.svg') }}" class="social" alt="logo facebook"></a>
             </div>
             <div class="col-12 text-right align-self-end p-0 display_desktop">
@@ -180,7 +180,7 @@
                 </ul>
             </div>
             <div class="col-12 text-center pl-0 pr-0">
-                <img src="{{ asset('images/social/linkedin-logo-blanc.svg') }}" class="social" alt="logo linkedin">
+                <a href="https://www.linkedin.com/company/cocorico-digital?trk=d_public_post_follow_view_profile"><img src="{{ asset('images/social/linkedin-logo-blanc.svg') }}" class="social" alt="logo linkedin"></a>
                 <a href="https://www.facebook.com/Cocorico-Digital-435675233930398/?modal=admin_todo_tour"><img src="{{ asset('images/social/facebook-logo-blanc.svg') }}" class="social" alt="logo facebook"></a>
             </div>
             <div class="col-12 text-center d-lg-none pl-0 pr-0 pt-3">
