--- a/templates/article.html.twig
+++ b/templates/article.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
     <div class="container-fluid">
-        <div class="row background_article col-12 col-lg-12 mr-0">
+        <div class="row background_article col-12 col-lg-12 ">
         </div>
         <div class="row offset-1 col-10 title_article">
             <div class="col-lg-12">
