--- a/templates/article.html.twig
+++ b/templates/article.html.twig
@@ -18,9 +18,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="offset-2 col-8">
+            <div class="offset-lg-2 col-12 col-lg-8">
                 <p class="text-justify">{{ article.content|raw  }}</p>
-
             </div>
             <div class="offset-2 col-8 text-center">
                 <a href="{{ path('blog_page') }}"><button>Blog</button></a>
