--- a/templates/article.html.twig
+++ b/templates/article.html.twig
@@ -17,7 +17,7 @@
                 <h2>le {{ article.date | date('d F Y') }}</h2>
             </div>
         </div>
-        <div class="row">
+        <div class="row content-article">
             <div class="offset-lg-2 col-12 col-lg-8">
                 <p class="text-justify">{{ article.content|raw  }}</p>
             </div>
