--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,7 @@
     {% block stylesheets %}{% endblock %}
 </head>
 <body>
-<div class="container-fluid" role="navigation">
+<div role="navigation">
     <header>
         <div class="row d-flex align-items-start " id="header-main">
             <!-- Logo -->
