--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="robots" content="noindex">
     <meta name="googlebot" content="noindex">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>{% block title %}Welcome!{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{{ asset('CSS/bootstrap.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ asset('CSS/admin/base_admin.css') }}">
