--- a/public/CSS/admin/base_admin.css
+++ b/public/CSS/admin/base_admin.css
@@ -1,3 +1,27 @@
+
+/* Navbar */
+.navbar {
+    background: #FFF;
+}
+
+#header-main {
+    height: auto;
+}
+
+.nav-link {
+    font-family: "Roboto", sans-serif;
+    font-size: 1em;
+    font-weight: normal;
+    line-height: 1.75em;
+    letter-spacing: 0.03em;
+    color: #373737;
+}
+
+/* Images */
+.svg {
+    margin-top: 4em;
+    margin-bottom: 1.5em;
+}
 @media screen and (min-width: 1280px) {
     nav {
         display: inline-block;
