Delete lorem ipsum in the head of the homepage

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -20,9 +20,7 @@
                         <h2>L'agence web au coeur de vos besoins</h2>
                     </div>
                     <div class="row">
-                        <p class="envaleur">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi commodo felis
-                            turpis, sit amet rhoncus augue fringilla aliquam. Duis eleifend massa non quam molestie
-                            dictum.</p>
+                        <p class="envaleur">L’agence est spécialisée dans la réalisation de projets en transformation digitale. Elle accompagne les petites structures et les indépendants dans leur projet de stratégie en présence en ligne et d’optimisation de leurs existants. Cocorico digital conçoit des outils dernières générations et exclusivement développés en France.</p>
                     </div>
                     <div class="row justify-content-around">
                         <a>
