Change lorem ipsum in the head of references page

--- a/templates/references.html.twig
+++ b/templates/references.html.twig
@@ -14,12 +14,10 @@
                         <h1>Nos clients</h1>
                     </div>
                     <div class="row col-xs-6">
-                        <h2>A Subtitle</h2>
+                        <h2>Historique et cas pratiques de nos clients</h2>
                     </div>
                     <div class="row">
-                        <p class="envaleur">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi commodo felis
-                            turpis, sit amet rhoncus augue fringilla aliquam. Duis eleifend massa non quam molestie
-                            dictum.</p>
+                        <p class="envaleur">Découvrez tous les projets réalisés par l’agence Cocorico digital ! Ils nous ont fait confiance, pourquoi pas vous ?</p>
                     </div>
                 </div>
                 <div class="col-lg-5 d-none d-lg-block">
