Change lorem ipsum in the head of blog page

--- a/templates/blog.html.twig
+++ b/templates/blog.html.twig
@@ -14,12 +14,10 @@
                         <h1>Blog</h1>
                     </div>
                     <div class="row col-xs-6">
-                        <h2>A Subtitle</h2>
+                        <h2>Un peu de lecture pour tout comprendre du digital !</h2>
                     </div>
                     <div class="row">
-                        <p class="envaleur">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi commodo felis
-                            turpis, sit amet rhoncus augue fringilla aliquam. Duis eleifend massa non quam molestie
-                            dictum.</p>
+                        <p class="envaleur">Retrouvez tous nos conseils et astuces pour devenir un pro du digital ! Actualités, checklists, ebook… Tout y est pour assouvir votre soif de connaissances !</p>
                     </div>
                 </div>
                 <div class="col-lg-5 d-none d-lg-block">
