Delete lorem ipsum in about page

--- a/templates/propos.html.twig
+++ b/templates/propos.html.twig
@@ -10,12 +10,10 @@
                         <h1>A propos</h1>
                     </div>
                     <div class="row">
-                        <h2>A subtitle</h2>
+                        <h2>Qui sommes-nous</h2>
                     </div>
                     <div class="row">
-                        <p class="envaleur">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi commodo felis
-                            turpis, sit amet rhoncus augue fringilla aliquam. Duis eleifend massa non quam molestie
-                            dictum.</p>
+                        <p class="envaleur">Cocorico digital c’est avant tout une seule et même ambition : répondre à vos besoins dans les meilleurs délais et de la manière la plus adaptée ! Après tout, ne dit-on pas que notre agence est “au coeur de vos besoins” ?</p>
                     </div>
                     <div class="row justify-content-around">
                         <a>
@@ -38,7 +36,7 @@
                     </div>
                     <div class="col-4">
                         <p>Delphine</p>
-                        <p>Dev</p>
+                        <p>Développeuse Full-stack</p>
                     </div>
                 </div>
                 <div class="row space justify-content-left justify-content-lg-center">
@@ -47,7 +45,7 @@
                     </div>
                     <div class="col-4">
                         <p>Ronan</p>
-                        <p>Design</p>
+                        <p>Directeur artistique</p>
                     </div>
                 </div>
                 <div class="row space justify-content-left justify-content-lg-center">
@@ -56,7 +54,7 @@
                     </div>
                     <div class="col-4">
                         <p>Benoit</p>
-                        <p>Dev</p>
+                        <p>Développeur Back-end</p>
                     </div>
                 </div>
                 <div class="row space justify-content-left justify-content-lg-center">
@@ -65,7 +63,7 @@
                     </div>
                     <div class="col-4">
                         <p>Naïma</p>
-                        <p>Market</p>
+                        <p>Directrice Marketing</p>
                     </div>
                 </div>
                 <div class="row space justify-content-left justify-content-lg-center">
@@ -74,31 +72,17 @@
                     </div>
                     <div class="col-4">
                         <p>Noémie</p>
-                        <p>Design</p>
+                        <p>UX / UI Designer</p>
                     </div>
                 </div>
             </div>
             <div class="col-0 col-lg-7">
                 <h4 class="d-none d-lg-inline-flex">Titre</h4>
-                <p class="d-none d-lg-inline-flex">Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
-                    opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit vultu
-                    adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet patruelis,
-                    siquid per inprudentiam gestum est remissurus ut mitis et clemens, participemque eum suae
-                    maiestatis adscisceret, futurum laborum quoque socium, quos Arctoae provinciae diu fessae
-                    poscebant.</p>
+                <p class="d-none d-lg-inline-flex">L’agence Cocorico digital est née d’un constat : seul 66 % des TPE/PME françaises ont un site internet. C’est pourquoi nous aidons aujourd’hui les professionnels à être visible sur internet en alliant nos compétences. Développement, design, marketing : voici la recette magique pour répondre à vos besoins ! </p>
                 <img src="{{ asset('images/home-intro.jpg') }}" alt="Bootstrap" class="img-fluid about d-none d-lg-inline-flex" id="left">
-                <p class="d-none d-lg-inline-flex">Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
-                    opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit vultu
-                    adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet patruelis,
-                    siquid per inprudentiam gestum est remissurus ut mitis et clemens, participemque eum suae
-                    maiestatis adscisceret, futurum laborum quoque socium, quos Arctoae provinciae diu fessae
-                    poscebant.</p>
-
-                <p class="d-none d-lg-inline-flex">Alii nullo quaerente vultus severitate adsimulata patrimonia sua in inmensum extollunt, cultorum
-                    ut puta feracium multiplicantes annuos fructus, quae a primo ad ultimum solem se abunde
-                    iactitant possidere, ignorantes profecto maiores suos, per quos ita magnitudo Romana porrigitur,
-                    non divitiis eluxisse sed per bella saevissima, nec opibus nec victu nec indumentorum vilitate
-                    gregariis militibus discrepantes opposita cuncta superasse virtute.</p>
+                <p class="d-none d-lg-inline-flex">Notre équipe complémentaire vous accompagne tout au long de votre projet et surtout : vous écoute. En plus de faire du 100% français (aucun service n’est externalisé), nous misons tout sur la proximité avec le client. Chez Cocorico digital, nous prenons le temps de vous écouter, de vous comprendre et nous vous proposons une solution sans perdre de vue la dimension humaine.
+                    100% transparent, 100% français. N’attendez plus que les poules aient des dents pour réaliser vos projets (même les plus fous) !
+                </p>
                 <div class="row justify-content-center d-none d-lg-inline-flex">
                     <button>Button</button>
                 </div>
