--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -14,12 +14,10 @@
                         <h1>Nous contacter</h1>
                     </div>
                     <div class="row col-xs-6">
-                        <h2>A Subtitle</h2>
+                        <h2>Contactez la team Cocorico Digital !</h2>
                     </div>
                     <div class="row">
-                        <p class="envaleur">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi commodo felis
-                            turpis, sit amet rhoncus augue fringilla aliquam. Duis eleifend massa non quam molestie
-                            dictum.</p>
+                        <p class="envaleur">LVous avez besoin d’une information, une question à nous poser ou vous souhaitez juste nous laisser un petit mot doux ? Pas de problème, on se lève au chant du coq pour traiter au plus vite votre demande !</p>
                     </div>
                 </div>
                 <div class="col-lg-5 d-none d-lg-block">
